# sqtool

./: .gitmodules  CMakeLists.txt  COPYRIGHT  LICENSE  Makefile  NOTES  README  sqtool.cbp
cpkgs/: CMakeLists.txt
cpkgs/basictypes/: CMakeLists.txt  sqt_basictypes.c
cpkgs/fs/: listDir_win_impl.h  sqt_fs.c  sqt_fs.h  stat_win_impl.h
cpkgs/serializer/: CMakeLists.txt  sqt_serbin.c  sqt_serjson.c
cpkgs/textrw/: CMakeLists.txt  sqstdtext.cpp  sqstdtext.h  sqstdtextrw.cpp  sqstdtextrw.h
cpkgs/textrw/test/: .gitignore  Makefile  test.cbp
cpkgs/textrw/test/include/: env.h  sqconfig.h
cpkgs/textrw/test/src/: env.c  main.c  test_utf16be.h  test_utf32be.h  test_utf8.h
cpkgs/xml/: CMakeLists.txt  sqt_xml.c  sqt_xml_lexer.c
doc/source/: conf.py  index.rst
doc/source/sqtlib/: index.rst  sqt_ctypes.rst
etc/: builtin_packages_list.c  empty_c_file.c  empty_source.c  get_registered.sed  make_lib.inc  sqpackage.cmake
fs/: listDir_linux_impl.h  sqt_fs.c  stat_linux_impl.h
include/: sqstdblob.h  sqstdio.h  sqt_basictypes.h  sqt_serbin.h  sqt_serializer.h  sqt_serjson.h  sqtool.h  sqtstreamreader.h  squirrel.h
pkgs/xml/: parsexml.nut
serializers/: sqt_serbin.c  sqt_serjson.c
sqtlib/: sqstdblob.cpp  sqstdblobimpl.h  sqstdio.cpp  sqstdstream.cpp  sqstdsystem.cpp  sqt_basictypes.c  sqt_decl.c  sqt_serbin.c  sqt_serjson.c  sqt_squirrelio.cpp  sqt_streamreader.cpp  sqt_textio.cpp  sqt_wstr.c  sqt_xml.c
sqtool/: CMakeLists.txt  sqtool.c  sqtool_osname.h
test/: dir.nut  dump_this.nut  exit_code.nut  parsexml.nut  src_utf16be_bom.nut  src_utf16le_bom.nut  src_utf8.nut  src_utf8_bom.nut  syntax_err.nut  test_basetypes.nut  test_chdir.nut  test_globals.nut  test_popen.nut  test_serbin.nut  test_serjson.nut  test_sqio.nut  test_staticarray.nut  test_stream.nut  test_streamrdr.nut  test_textio.nut  test_textreader.nut  test_textrw.nut  test_textrw_random.nut  test_textwriter.nut  test_xmllex.nut  test_xmlparse.nut  xml_1.xml
vectors/: staticarray.cpp
